--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^1.9.0",
     "next": "15.3.2",
+    "octokit": "^5.0.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "semver": "^7.7.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -20,6 +22,7 @@
     "@types/node": "^20.17.52",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/semver": "^7.7.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
